<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/FaultCodes"
        android:enabled="true"
        android:icon="@drawable/ic_code_black_24dp"
        android:title="@string/diagnose" />

    <item
        android:id="@+id/LiveInformation"
        android:enabled="true"
        android:icon="@drawable/ic_timeline_black_24dp"
        android:title="@string/realtime" />

    <item
        android:id="@+id/SystemTesting"
        android:enabled="true"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/tests" />

    <item
        android:id="@+id/Feedback"
        android:enabled="true"
        android:icon="@drawable/ic_feedback_black_24dp"
        android:title="@string/feedback" />

</menu>