<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context="me.oshoubber.gears.MainActivity"
    android:id="@+id/drawerlayout">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="280dp"
            android:layout_height="280dp"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/card_view"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="311dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/dfc"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/title"
            android:gravity="center"
            android:text="@string/title"
            android:theme="@style/title1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/dfc"
            android:drawableLeft="@drawable/ic_code_white_24dp"
            android:drawablePadding="-4dp"
            android:layout_width="360dp"
            android:layout_height="78dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/diagnose"
            android:theme="@style/Button1"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            app:layout_constraintBottom_toTopOf="@+id/rti"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/rti"
            android:drawableLeft="@drawable/ic_timeline_white_24dp"
            android:drawablePadding="-4dp"
            android:layout_width="360dp"
            android:layout_height="78dp"
            android:gravity="center"
            android:text="@string/realtime"
            android:theme="@style/Button1"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/st"
            app:layout_constraintTop_toBottomOf="@+id/dfc"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/st"
            android:drawableLeft="@drawable/ic_assessment_white_24dp"
            android:drawablePadding="-4dp"
            android:layout_width="360dp"
            android:layout_height="78dp"
            android:gravity="center"
            android:text="@string/tests"
            android:theme="@style/Button1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rti"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="16dp" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            app:elevation="6dp"
            app:fabSize="mini"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:borderWidth="0dp"
            app:srcCompat="@android:drawable/stat_sys_data_bluetooth" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />


</android.support.v4.widget.DrawerLayout>
